# drogue-device

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  DRIVERS.adoc  DRIVERS.md  Makefile  README.adoc  README.md  rust-toolchain  rust-toolchain.toml  rustfmt.toml
actor/: Cargo.toml
actor/examples/: pingpong.rs  request.rs
actor/src/: actor.rs  lib.rs  testutil.rs
actor/tests/: integration_tests.rs
actors/: Cargo.toml
actors/src/: button.rs  lib.rs  ticker.rs  timer.rs
actors/src/led/: matrix.rs  mod.rs
apps/ble/: Cargo.toml
apps/ble/src/: advertiser.rs  controller.rs  lib.rs  microbit.rs
apps/ble/src/gatt/: device_info.rs  mod.rs  temperature.rs
apps/drogue-temperature/: Cargo.toml  server.py
apps/drogue-temperature/src/: lib.rs
apps/wifi/: Cargo.toml
apps/wifi/src/: lib.rs
arch/: Cargo.toml
arch/src/: lib.rs
arch/src/cortex_m/: mod.rs
arch/src/x86/: mod.rs
arena/: Cargo.toml
arena/src/: lib.rs
arena/src/static_arena/: mod.rs
boards/adafruit-feather-nrf52/: Cargo.toml  README.md
boards/adafruit-feather-nrf52/.cargo/: config.toml
boards/adafruit-feather-nrf52/src/: board.rs  lib.rs
boards/disco-iot01a/: Cargo.toml  README.md
boards/disco-iot01a/.cargo/: config.toml
boards/disco-iot01a/src/: lib.rs
boards/disco-l072z-lrwan1/: Cargo.toml
boards/disco-l072z-lrwan1/src/: lib.rs
boards/microbit/: Cargo.toml  README.md
boards/microbit/.cargo/: config.toml
boards/microbit/examples/: Cargo.toml
boards/microbit/examples/.cargo/: config.toml
boards/microbit/examples/ble/: Cargo.toml  README.md  memory.x
boards/microbit/examples/display/: Cargo.toml  README.md  memory.x
boards/microbit/src/: board.rs  lib.rs  mic.rs  speaker.rs
boards/microbit/src/accelerometer/: mod.rs
boards/microbit/src/display/: mod.rs  types.rs
boards/nucleo-h743zi/: Cargo.toml  README.md
boards/nucleo-h743zi/src/: lib.rs
boards/nucleo-wl55jc/: Cargo.toml
boards/nucleo-wl55jc/.cargo/: config.toml
boards/nucleo-wl55jc/src/: lib.rs
device/: Cargo.toml  build.rs
device/src/: device.rs  lib.rs  package.rs  shared.rs  testutil.rs
device/src/actors/: button.rs  dfu.rs  flash.rs  mod.rs  net.rs  socket.rs  ticker.rs  timer.rs  transformer.rs
device/src/actors/dfu/: mod.rs  serial.rs  usb.rs
device/src/actors/i2c/: mod.rs
device/src/actors/led/: matrix.rs  mod.rs
device/src/actors/lora/: mod.rs
device/src/actors/sensors/: mod.rs
device/src/actors/tcp/: mod.rs  std.rs
device/src/actors/usb/: dfu.rs  mod.rs
device/src/actors/wifi/: mod.rs
device/src/boards/: mod.rs
device/src/boards/b-l475e-iot01a/: board.rs
device/src/bsp/: mod.rs
device/src/bsp/boards/: mod.rs
device/src/clients/: http.rs  mqtt.rs
device/src/domain/: mod.rs  temperature.rs
device/src/domain/led/: matrix.rs
device/src/drivers/: button.rs  dns.rs  firmware.rs  mod.rs
device/src/drivers/ble/: mod.rs
device/src/drivers/common/: mod.rs  socket_pool.rs
device/src/drivers/led/: gpio.rs  matrix.rs  mod.rs  neopixel.rs
device/src/drivers/lora/: device.rs  mod.rs
device/src/drivers/serial/: mod.rs
device/src/drivers/tcp/: mod.rs  smoltcp.rs  std.rs
device/src/drivers/wifi/: mod.rs
device/src/firmware/: mod.rs  remote.rs  serial.rs
device/src/firmware/remote/: http.rs  lorawan.rs  mod.rs
device/src/flash/: mod.rs
device/src/kernel/: actor.rs  channel.rs  device.rs  mod.rs  package.rs  signal.rs
device/src/lora/: mod.rs
device/src/net/: dns.rs
device/src/network/: connection.rs  mod.rs  socket.rs  tcp.rs
device/src/network/clients/: http.rs  mod.rs  mqtt.rs
device/src/ota/: http.rs  lorawan.rs  mod.rs
device/src/traits/: button.rs  dns.rs  firmware.rs  i2c.rs  ip.rs  led.rs  mod.rs  tcp.rs  wifi.rs
device/src/traits/lora/: api.rs  mod.rs  types.rs
device/tests/: button_tests.rs  integration_tests.rs  ticker_tests.rs  timer_tests.rs
drivers/: Cargo.toml
drivers/lora/sx127x/: Cargo.toml
drivers/network/esp8266/: Cargo.toml
examples/blinky/: Cargo.toml  build.rs
examples/blinky-generic/: Cargo.toml
examples/blinky-generic/src/: main.rs
examples/blinky/.cargo/: config.toml
examples/blinky/src/: main.rs
examples/device/: Cargo.toml  build.rs
examples/device/src/: lib.rs
examples/drogue-cloud-http/: Cargo.toml
examples/drogue-cloud-http/src/: main.rs
examples/std/: Cargo.toml
examples/std/cloud/: Cargo.toml  README.adoc  build.rs
examples/std/esp8266/: Cargo.toml  README.adoc  build.rs
examples/std/hello/: Cargo.toml
examples/std/package/: Cargo.toml  README.adoc
examples/std/pingpong/: Cargo.toml  README.adoc
examples/std/rak811/: Cargo.toml  README.adoc
examples/tests/: Cargo.toml
examples/tests/src/: main.rs
kernel/: Cargo.toml
kernel/src/: actor.rs  channel.rs  device.rs  lib.rs  package.rs  signal.rs  util.rs
kernel/src/system/: actor.rs  address.rs  executor.rs  mod.rs  signal.rs
kernel/tests/: integration_tests.rs
macros/: Cargo.toml
macros/src/: actor.rs  configure.rs  lib.rs
platform/std/: Cargo.toml
platform/std/src/: lib.rs
rt/: Cargo.toml
rt/src/: lib.rs
rt/src/api/: arbitrator.rs  delayer.rs  lora.rs  mod.rs  queue.rs  scheduler.rs  spi.rs  switchable.rs  timer.rs  uart.rs  wifi.rs
rt/src/api/ip/: mod.rs  (+1 more)
rt/src/arena/: mod.rs
rt/src/driver/: button.rs  memory.rs  mod.rs
rt/src/hal/: timer.rs
rt/src/platform/: mod.rs
rt/src/synchronization/: sempahore.rs  signal.rs
rt/src/system/: actor.rs  address.rs  bus.rs  device.rs  handler.rs  macros.rs  mod.rs
rt/tests/: integration_tests.rs
tls/: Cargo.toml
tls-sys/: Cargo.toml  log
tls-sys/include/: string.h
tls-sys/src/: lib.rs  types.rs
tls/drogue-tls-sys/: build.rs
tls/drogue-tls-sys/include/: drogue_config.h  platform_alt.h  stdio.h
tls/drogue-tls-sys/src/: bindings.rs
tls/src/: lib.rs
tls/src/entropy/: context.rs  mod.rs  source.rs
tls/src/net/: mod.rs  tcp_stack.rs
tls/src/platform/: mod.rs
tls/src/rng/: ctr_drbg.rs
tls/src/ssl/: context.rs
tls/tls/: Cargo.toml
tls/tls-sys/: log
tls/tls-sys/include/: stdlib.h
tls/tls-sys/src/: types.rs  wrapper.h
(+928 files in other folders)
