[workspace]
members = [
    "device",
    "macros",
    "xtask",
]
resolver = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
#embassy-traits = { git = "https://github.com/embassy-rs/embassy.git", rev = "5e94b8060b7f1af8118ca1f943181ce70be92057"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4"}
#nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4"}
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "b71e18bc76d5704614d3eef27f3ce8e8c1f477d4"}
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "411462aa4a03e61a10e5d00ca9e93166d8370eee"}

# embassy = { path = "../../../../../embassy/embassy" }
# embassy-stm32 = { path = "../../../../../embassy/embassy-stm32" }

#embassy = { path = "../../embassy/embassy" }
#embassy-stm32 = { path = "../../embassy/embassy-stm32" }
#embassy-nrf = { path = "../../embassy/embassy-nrf" }
#embassy-lora = { path = "../../embassy/embassy-lora" }
#embassy-net = { path = "../../embassy/embassy-net" }
#embassy-traits = { path = "../../embassy/embassy-traits" }
