[workspace]
members = [
    "device",
    "macros",
    "xtask",
]
resolver = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
#embassy-traits = { git = "https://github.com/embassy-rs/embassy.git", rev = "e3f8020c3bdf726dfa451b5b190f27191507a18f"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f"}
#nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f"}
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "e8ee783fdd9674a061c2479d0a29e87e4e2a6d2f"}
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "411462aa4a03e61a10e5d00ca9e93166d8370eee"}

# embassy = { path = "../../../../../embassy/embassy" }
# embassy-stm32 = { path = "../../../../../embassy/embassy-stm32" }

#embassy = { path = "../../embassy/embassy" }
#embassy-stm32 = { path = "../../embassy/embassy-stm32" }
#embassy-nrf = { path = "../../embassy/embassy-nrf" }
#embassy-lora = { path = "../../embassy/embassy-lora" }
#embassy-net = { path = "../../embassy/embassy-net" }
#embassy-traits = { path = "../../embassy/embassy-traits" }
