[workspace]
members = [
    "device",
    "macros",
    "xtask",
]
resolver = "2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
embassy-boot = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
embassy-lora = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
#embassy-traits = { git = "https://github.com/embassy-rs/embassy.git", rev = "59f706ee2f93252d1c040cea149dfd744f4d8c16"}
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "3b08bda268d343e100932cbf0df7e007826fa3be"}
#nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "3b08bda268d343e100932cbf0df7e007826fa3be"}
nrf-softdevice-macro = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "3b08bda268d343e100932cbf0df7e007826fa3be"}
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "602f26d72903f194d1f9e95c073d2c513b335623"}

# embassy = { path = "../../../../../embassy/embassy" }
# embassy-stm32 = { path = "../../../../../embassy/embassy-stm32" }

#embassy = { path = "../../embassy/embassy" }
#embassy-stm32 = { path = "../../embassy/embassy-stm32" }
#embassy-nrf = { path = "../../embassy/embassy-nrf" }
#embassy-lora = { path = "../../embassy/embassy-lora" }
#embassy-net = { path = "../../embassy/embassy-net" }
#embassy-traits = { path = "../../embassy/embassy-traits" }
