[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-actors"
version = "0.1.0"

[dependencies.drogue-device-kernel]
path = "../kernel"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.embassy-traits]
# git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "nrf-port-any-edge"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.defmt]
version = "0.2"
optional = true

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]
