[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-actors"
version = "0.1.0"

[dependencies]
drogue-device-kernel = { path = "../kernel" }

embassy = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false } #, path = "../../../embassy/embassy" }
embassy-traits = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false } #, path = "../../../embassy/embassy-traits" }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
log = { version = "0.4", optional = true }
defmt = { version = "0.2", optional = true }
heapless = { version = "0.5" }

[dev-dependencies]
embassy = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false, features = ["std"] } #, path = "../../../embassy/embassy" }
embassy-std = {git = "https://github.com/drogue-iot/embassy.git", branch = "drogue", default-features = false } #, path = "../../../embassy/embassy-std" }
drogue-device = { path = "../device", features = ["std"] }

[features]
fonts = []
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]
