[package]
name = "drogue-arch"
version = "0.1.0"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "Architecture-specific abstractions"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-device"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std" ]
keywords = ["embedded", "no_std"]

[dependencies.cortex-m]
version = "0.6.0"

[target.'cfg(target_arch="arm")'.dependencies.cortex-m-rt]
version = "0.6.13"