[package]
edition = "2021"
name = "drogue-device"
version = "0.1.0"

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
embedded-hal-async = "=0.1.0-alpha.3"

# Handy macros, e.g. drogue::config
drogue-device-macros = { path = "../macros" }

# Actor framework required for "actors" feature
ector = { version = "0.1.0", default-features = false, optional = true }

#embassy-executor = { version = "0.1.0", default-features = false, features = ["nightly", "integrated-timers"] }
#embassy-time = { version = "0.1.0", default-features = false, features = ["nightly"] }
#embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }
#embassy-futures = "0.1.0"
#static_cell = "1"

# LoRa dependencies
# lorawan-device = { version = "0.8", default-features = false, features = ["async"], optional = true }
# lorawan-encoding = { package = "lorawan", version = "0.7.1", default-features = false, features = ["default-crypto"], optional = true }
# lorawan-encoding = { path = "../../../rust-lorawan/encoding", default-features = false, features = ["default-crypto", "defmt"], optional = true }
# lorawan-device = { path = "../../../rust-lorawan/device", default-features = false, optional = true, features = ["withdefmt", "async"] }

# embassy-lora = { version = "0.1.0", default-features = false, features = ["time"], optional = true }
# embassy-net = { version = "0.1.0", default-features = false, optional = true, features= ["tcp", "medium-ethernet", "pool-16", "proto-ipv6", "dhcpv4" ]}
#embassy-traits = { version = "0.1.0", default-features = false, optional = true }
#embassy-stm32 = {path = "../../../embassy/embassy-stm32", default-features = false, optional = true }
#nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server"], optional=true }
#nrf-softdevice-s113 = { version = "0.1.0", optional=true }
#nrf-softdevice-s140 = { version = "0.1.0", optional=true }

# Wifi Dependencies
# nom = { version = "6", default-features = false, optional = true }
# moveslice = { version = "2.0", optional = true }
# es-wifi-driver = { git = "https://github.com/lulf/es-wifi-driver.git", default-features = false, rev = "7d7a08717c6215caf7f32e9ded1c8d28c29b1b0e", optional = true }

# Networking dependencies
#embedded-nal = "0.6.0"
#embedded-nal-async = "0.2.0"
##firmware-updater = { git = "https://github.com/drogue-iot/firmware-updater.git", branch = "main", default-features = false }
#embedded-update = { version = "0.8", default-features = false, features = ["nightly"] }
#
## TLS dependency
#embedded-tls = { version = "0.8.0", default-features = false, features = ["async"], optional = true}
##drogue-tls = {path = "../../drogue-tls", default-features = false, features = ["async", "defmt"], optional = true}
#rand_core = { version = "0.6.2", default-features = false }
#rand = { version = "0.8.4", default-features = false, features = ["small_rng"], optional = true }
#
#heapless = { version = "0.7", features = ["defmt-impl"] }
#embedded-io = { version = "0.3.0", features = ["async"] }
#atomic-polyfill = "1"
#critical-section = "1"
#
## Logging alternatives
#log = { version = "0.4", optional = true }
#defmt = { version = "0.3", optional = true }
#
## HTTP dependencies
#reqwless = "0.1"




# Storage
# embedded-storage-async = { version = "0.3.0" }
# embedded-storage = { version = "0.3.0" }

# Bootloader
# embassy-boot = { version = "0.1.0", optional = true }

# DFU
# serde_cbor = { version = "0.11", optional = true, default-features = false }

#[dev-dependencies]
## ector = { version = "0.1.0", features = ["std"] }
#embassy-executor = { version = "0.1.0", features = ["std", "integrated-timers"]}
#embassy-time = { version = "0.1.0", features = ["std", "tick-hz-1_000_000"]}
##embassy-executor = {path = "../../../embassy/embassy-executor", features = ["std", "integrated-timers"]}
##embassy-time = {path = "../../../embassy/embassy-time", features = ["std", "tick-1mhz"]}
#
#futures = { version = "0.3", default-features = false, features = ["executor"] }
#arrayvec = { version = "0.6" }

[features]
actors = ["ector"]
std = []
"board+b-l475e-iot01a" = []
"board+nrf52-dk" = []
