[package]
edition = "2021"
name = "drogue-device"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
embassy-time = { version = "0.1.0", default-features = false, features = ["nightly", "unstable-traits"] }
embassy-sync = { version = "0.1.0", default-features = false, features = ["nightly"] }
embassy-embedded-hal = { version = "0.1.0", default-features = false, features = ["nightly"] }
embassy-lora = { version = "0.1.0", default-features = false, features = ["time"] }
embassy-futures = "0.1.0"
static_cell = "1"

# LoRa dependencies
lorawan-device = { version = "0.8", default-features = false, features = ["async"] }
lorawan = { version = "0.7.1", default-features = false, features = ["default-crypto"] }

nrf-softdevice = { version = "0.1.0", features = ["ble-peripheral", "ble-gatt-server"], optional=true }
cortex-m = { version = "0.7", optional = true }

# Networking dependencies
embedded-nal = "0.6.0"
embedded-nal-async = "0.2.0"
embedded-update = { version = "0.9", default-features = false, features = ["nightly"] }
embedded-tls = { version = "0.9.0", default-features = false, features = ["async"] }

rand_core = { version = "0.6.2", default-features = false }
rand = { version = "0.8.4", default-features = false, features = ["small_rng"], optional = true }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11", default-features = false }

futures = { version = "0.3", default-features = false }
futures-intrusive = { version = "0.4", default-features = false }
heapless = { version = "0.7", features = ["defmt-impl"] }
embedded-hal = { version = "=1.0.0-alpha.9"}
embedded-hal-async = { version = "=0.1.0-alpha.3" }
embedded-io = { version = "0.3", features = ["async"] }
#atomic-polyfill = "1"
#critical-section = "1"

# Logging alternatives
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

# HTTP dependencies
reqwless = "0.2.1"

# Handy macros, e.g. drogue::config
drogue-device-macros = { path = "../macros" }

ector = { version = "0.1.0", default-features = false, optional = true }

# Storage
embedded-storage-async = { version = "0.3.0" }
embedded-storage = { version = "0.3.0" }

# Bootloader
embassy-boot = { version = "0.1.0" }

minicbor = { version = "0.18.0", default-features = false }

[dev-dependencies]
ector = { version = "0.1.0", features = ["std"] }
embassy-executor = { version = "0.1.0", features = ["std", "integrated-timers"]}
embassy-time = { version = "0.1.0", features = ["std", "tick-hz-1_000_000"]}
#embassy-executor = {path = "../../../embassy/embassy-executor", features = ["std", "integrated-timers"]}
#embassy-time = {path = "../../../embassy/embassy-time", features = ["std", "tick-1mhz"]}
serde_cbor = { version = "0.11", features = ["std"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
arrayvec = { version = "0.6" }

[features]
default = [ "std", "log", "time" ]
defmt = [
    "dep:defmt",
    "embassy-executor/defmt",
    "embassy-sync/defmt",
    "embedded-tls/defmt",
    "embedded-update/defmt"
]
std = ["embassy-executor/std", "ector/std", "embedded-io/std", "serde_cbor/std"]
time = []
ble-peripheral = []
"ble+softdevice" = [
    "cortex-m",
    "ble-peripheral",
    "nrf-softdevice",
    "nrf-softdevice/ble-peripheral",
]
