[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-drivers"
version = "0.1.0"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.defmt]
version = "0.2"
optional = true

[features]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]
