[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-kernel"
version = "0.1.0"

[dependencies.embassy]
#git = "https://github.com/embassy-rs/embassy.git"
git = "https://github.com/lulf/embassy.git"
branch = "reexport-macro-param"
default-features = false

[dependencies.heapless]
version = "0.6"

[dependencies.log]
version = "0.4"
optional = true

[dependencies.defmt]
version = "0.2"
optional = true

[features]
std = ["embassy/std"]
defmt-trace = [ ]
defmt-debug = [ ]
defmt-info = [ ]
defmt-warn = [ ]
defmt-error = [ ]
