[package]
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
name = "drogue-device-macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.89", features = ["full", "extra-traits"] }
quote = "1.0.7"
#darling = "0.10.2"
proc-macro2 = "1.0.24"
cfg-if = "1.0.0"
config = "0.11"
lazy_static = "1"

[features]
std = []
