[package]
name = "drogue-device"
version = "0.1.0"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "An async actor framework for embedded devices"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-device"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std", "async", "actor"]
keywords = ["async", "embedded", "actor", "no_std"]

[dependencies.heapless]
version = "0.5.6"

[dependencies.drogue-arch]
path = "../arch"

[dependencies.drogue-arena]
path = "../arena"

[dependencies.async-trait]
version = "0.1"

[dependencies.cortex-m]
version = "0.6"

[target.'cfg(target_arch="arm")'.dependencies.cortex-m-rt]
version = "0.6"

[dependencies.log]
version = "0.4"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.lorawan-device]
git = "https://github.com/lulf/rust-lorawan.git"
branch = "update-aes-cmac"
default-features = false
features = ["region+eu868"]
optional = true

[dependencies.lorawan-encoding]
git = "https://github.com/lulf/rust-lorawan.git"
branch = "update-aes-cmac"
default-features = false
optional = true
features = ["default-crypto"]

[dependencies.bit_field]
version = "0.10"
optional = true

[dependencies.nb]
version = "1.0.0"

[dependencies.bbqueue]
version = "0.4"

[dependencies.stm32l4xx-hal]
version = "0.6.0"
features = ["rt"]
optional = true

[dependencies.stm32l0xx-hal]
git = "https://github.com/stm32-rs/stm32l0xx-hal.git"
features = ["rt", "disable-linker-script"]
branch   = "master"
optional = true

[dependencies.nrf52833-hal]
#version = "0.12.0"
git = "https://github.com/lulf/nrf-hal.git"
branch = "uarte-embedded-serial"
features = ["rt"]
optional = true

[dependencies.stm32l1xx-hal]
git = "https://github.com/stm32-rs/stm32l1xx-hal"
features = ["rt", "stm32l151"]
optional = true

[dependencies.nrf51-hal]
git = "https://github.com/lulf/nrf-hal.git"
branch = "uarte-embedded-serial"
features = ["rt"]
optional = true

# ----------------------------------------
# es-wifi dependencies
# ----------------------------------------


[dependencies.nom]
version= "6.1.2"
default-features = false

# ----------------------------------------
# esp8266-wifi dependencies
# ----------------------------------------
[dependencies.moveslice]
version= "2.0"
optional = true

# ----------------------------------------
# lora dependencies
# ----------------------------------------
[dependencies.drogue-lora]
#path = "../drogue-lora"
git = "https://github.com/drogue-iot/drogue-lora.git"
branch = "main"

[dependencies.drogue-rak811]
#path = "../drogue-rak811"
git = "https://github.com/drogue-iot/drogue-rak811.git"
branch = "main"
optional = true

# ----------------------------------------
# test dependencies
# ----------------------------------------
[dev-dependencies.futures]
version = "0.3"
default-features = false
features = ["executor"]

[dev-dependencies.env_logger]
version = "0.8.2"

# ----------------------------------------
# embedded_time dependencies
# ----------------------------------------

[dependencies.num]
version = "0.3.0"
default-features = false

[features]
# let's deprecate these
stm32l4xx = [ "stm32l4xx-hal" ]

"chip+stm32l4xx" = [ "stm32l4xx-hal" ]
"chip+nrf52833" = [ "nrf52833-hal" ]
"chip+nrf51" = [ "nrf51-hal", "bbqueue/thumbv6", "drogue-arch/isa+thumbv6" ]
"chip+stm32l0xx" = [ "stm32l0xx-hal", "bbqueue/thumbv6", "drogue-arch/isa+thumbv6" ]

driver-rak811 = [ "drogue-rak811" ]
fonts = []

lora = []
"lora+rak811" = [ "lora", "drogue-rak811" ]
"lora+sx127x" = [ "lora", "lorawan-device", "lorawan-encoding", "bit_field" ]

wifi = []
"wifi+eswifi" = [ "wifi" ]
"wifi+esp8266" = [ "wifi", "moveslice" ]
