[package]
name = "drogue-device"
version = "0.1.0"
authors = [
    "Ulf Lilleengen <lulf@redhat.com>",
    "Bob McWhirter <bmcwhirt@redhat.com>"
]
edition = "2018"
license = "Apache-2.0"
description = "An async actor framework for embedded devices"
readme = "README.md"
repository = "https://github.com/drogue-iot/drogue-device"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std", "async", "actor"]
keywords = ["async", "embedded", "actor", "no_std"]

[dependencies.heapless]
version = "0.6.1"

[dependencies.drogue-arch]
path = "../arch"

[dependencies.drogue-arena]
path = "../arena"

[dependencies.cortex-m]
version = "0.6.0"

[target.'cfg(target_arch="arm")'.dependencies.cortex-m-rt]
version = "0.6.13"

[dependencies.log]
version = "0.4.13"

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]



[dependencies.nb]
version = "1.0.0"

[dependencies.bbqueue]
version = "0.4"

[dependencies.stm32l4xx-hal]
version = "0.6.0"
features = ["rt"]
optional = true

[dependencies.nrf52833-hal]
#version = "0.12.0"
git = "https://github.com/lulf/nrf-hal.git"
branch = "uarte-embedded-serial"
features = ["rt"]
optional = true

[dependencies.stm32l1xx-hal]
git = "https://github.com/stm32-rs/stm32l1xx-hal"
features = ["rt", "stm32l151"]
optional = true

[dependencies.nrf51-hal]
git = "https://github.com/lulf/nrf-hal.git"
branch = "uarte-embedded-serial"
features = ["rt"]
optional = true

# ----------------------------------------
# tls dependencies
# ----------------------------------------
[dependencies.p256]
version = "0.8.0-pre"
default-features = false
features = [ "ecdh", "arithmetic" ]

[dependencies.rand_core]
version = "0.6.2"
default-features = false

[dependencies.hkdf]
version = "0.10.0"

[dependencies.hmac]
version = "0.10.1"

[dependencies.sha2]
version = "0.9.3"
default-features = false

[dependencies.aes-gcm]
version = "0.8.0"
#path = "../../AEADs/aes-gcm"
default-features = false
#features = ["heapless", "aes"]
features = ["aes"]

[dependencies.digest]
version = "0.9.0"
default-features = false

[dependencies.typenum]
version = "1.13.0"

[dependencies.generic-array]
version = "0.14.4"

# ----------------------------------------
# es-wifi dependencies
# ----------------------------------------


[dependencies.nom]
version= "6.1.2"
default-features = false

# ----------------------------------------
# esp8266-wifi dependencies
# ----------------------------------------
[dependencies.moveslice]
version= "2.0"
optional = true

# ----------------------------------------
# lora dependencies
# ----------------------------------------
[dependencies.drogue-lora]
#path = "../drogue-lora"
git = "https://github.com/drogue-iot/drogue-lora.git"
branch = "main"

[dependencies.drogue-rak811]
#path = "../drogue-rak811"
git = "https://github.com/drogue-iot/drogue-rak811.git"
branch = "main"
optional = true

# ----------------------------------------
# test dependencies
# ----------------------------------------
[dev-dependencies.futures]
version = "0.3"
default-features = false
features = ["executor"]

[dev-dependencies.env_logger]
version = "0.8.2"

# ----------------------------------------
# embedded_time dependencies
# ----------------------------------------

[dependencies.num]
version = "0.3.0"
default-features = false

[features]
# let's deprecate these
stm32l4xx = [ "stm32l4xx-hal" ]

"chip+stm32l4xx" = [ "stm32l4xx-hal" ]
"chip+nrf52833" = [ "nrf52833-hal" ]
"chip+nrf51" = [ "nrf51-hal", "bbqueue/thumbv6", "drogue-arch/isa+thumbv6" ]

driver-rak811 = [ "drogue-rak811" ]
fonts = []

lora = []
"lora+rak811" = [ "drogue-rak811" ]

wifi = []
"wifi+eswifi" = [ "wifi" ]
"wifi+esp8266" = [ "wifi", "moveslice" ]
